--- a/scss/terrapin.scss
+++ b/scss/terrapin.scss
@@ -556,8 +556,8 @@ $terrapinGreen: #009933;
 
     font-weight: 300;
     letter-spacing: 3px;
-    width: 3 00px;
     width: 500px;
+    max-width: 80vw;
   }
 }
 
